--- a/TestGraphQL/TestGraphQL.csproj
+++ b/TestGraphQL/TestGraphQL.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.5.5" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="11.0.9" />
     <PackageReference Include="HotChocolate.Types" Version="11.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.4">
       <PrivateAssets>all</PrivateAssets>
