--- a/TestGraphQL/appsettings.json
+++ b/TestGraphQL/appsettings.json
@@ -7,8 +7,13 @@
     }
   },
   "ConnectionStrings": {
-    "DqtConStr": "Data Source=103.250.185.243,1444;initial catalog=ankitluniya111_RatlamiChaska;user id=ankitluniya111_2;password=9Ieh4j2*2018;",
-    "ConStr": "Data Source=dqtdbserver.database.windows.net;Initial Catalog=dqtdb2;MultipleActiveResultSets=true; Persist Security Info=True;User ID=bkatul;Password=Pass@123"
+    "DqtConStr": "Data Source=103.150.187.212,1444;initial catalog=ankitluniya111_RatlamiChaska;user id=ankitluniya111_2;password=9Ieh4j2*2018;",
+    "ConStr": "Data Source=BKLAP120;Initial Catalog=dqtdb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "TokenSettings": {
+    "Issuer": "localhost:5001",
+    "Audience": "API",
+    "Key": "MySecuredKey12345678910MySecuredKey12345678910"
   },
   "AllowedHosts": "*"
 }
